--- a/randovania/gui/ui_files/metroid_cosmetic_patches_dialog.ui
+++ b/randovania/gui/ui_files/metroid_cosmetic_patches_dialog.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>AM2R - Cosmetic Options</string>
+   <string>Metroid - Cosmetic Options</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="2" column="0">
